bindings/c/whiteout_textures.h

typedef struct whiteout_Texture whiteout_Texture;
typedef struct whiteout_PngApngFrameInfo whiteout_PngApngFrameInfo;
typedef struct whiteout_PngParser whiteout_PngParser;
typedef struct whiteout_PngApngFrame whiteout_PngApngFrame;
typedef struct whiteout_PngApngSaveOptions whiteout_PngApngSaveOptions;
typedef struct whiteout_PngWriter whiteout_PngWriter;
typedef struct whiteout_JpegParser whiteout_JpegParser;
typedef struct whiteout_JpegWriter whiteout_JpegWriter;
typedef struct whiteout_DdsParser whiteout_DdsParser;
typedef struct whiteout_DdsWriter whiteout_DdsWriter;
typedef struct whiteout_TexParser whiteout_TexParser;
typedef struct whiteout_D2rTextureParser whiteout_D2rTextureParser;
typedef struct whiteout_D2rTextureWriter whiteout_D2rTextureWriter;
typedef struct whiteout_BmpParser whiteout_BmpParser;
void whiteout_textures_PngParser_delete(whiteout_PngParser* self);
/* Parse a PNG byte buffer. */
struct whiteout_Texture* whiteout_textures_PngParser_parse(whiteout_PngParser* self, const uint8_t* buffer, size_t buffer_size);
/* @return true if the last parse produced any issues. */
int32_t whiteout_textures_PngParser_hasIssues(const whiteout_PngParser* self);
/* @return accumulated issues from the last parse call. */
size_t whiteout_textures_PngParser_getIssues_count(const whiteout_PngParser* self);
whiteout_CString whiteout_textures_PngParser_getIssues_at(const whiteout_PngParser* self, size_t index);
/* @return true if the last parsed PNG carried APNG animation chunks. */
int32_t whiteout_textures_PngParser_isAnimated(const whiteout_PngParser* self);
/* @return number of animation frames (0 when not animated). */
uint32_t whiteout_textures_PngParser_frameCount(const whiteout_PngParser* self);
/* @return APNG loop count from the `acTL` chunk; 0 means loop forever. */
uint32_t whiteout_textures_PngParser_loopCount(const whiteout_PngParser* self);
/* @return animation frame @p index, fully composited to the canvas size as an RGBA8 texture. In lenient mode an out-of-range index yields an empty texture; in strict mode it throws. @param index Zero-based frame index. */
struct whiteout_Texture* whiteout_textures_PngParser_frame(const whiteout_PngParser* self, uint32_t index);
/* @return display duration of frame @p index in milliseconds. @param index Zero-based frame index. */
uint32_t whiteout_textures_PngParser_frameDelayMs(const whiteout_PngParser* self, uint32_t index);
/* @return raw per-frame metadata for frame @p index. @param index Zero-based frame index. */
struct whiteout_PngApngFrameInfo* whiteout_textures_PngParser_frameInfo(const whiteout_PngParser* self, uint32_t index);
/* ── PngApngFrame ─────────────────────────────────────────────── */

/* One frame of an animated PNG (APNG), with its display duration. */
whiteout_PngApngFrame* whiteout_textures_PngApngFrame_new(void);
void whiteout_textures_PngApngFrame_delete(whiteout_PngApngFrame* self);
/* Display duration in milliseconds. */
uint32_t whiteout_textures_PngApngFrame_get_delayMs(const whiteout_PngApngFrame* self);
void whiteout_textures_PngApngFrame_set_delayMs(whiteout_PngApngFrame* self, uint32_t value);
/* ── PngApngSaveOptions ─────────────────────────────────────────────── */

/* Options controlling animated PNG (APNG) encoding. */
whiteout_PngApngSaveOptions* whiteout_textures_PngApngSaveOptions_new(void);
void whiteout_textures_PngApngSaveOptions_delete(whiteout_PngApngSaveOptions* self);
/* Number of times to loop; 0 means loop forever. */
uint32_t whiteout_textures_PngApngSaveOptions_get_loopCount(const whiteout_PngApngSaveOptions* self);
void whiteout_textures_PngApngSaveOptions_set_loopCount(whiteout_PngApngSaveOptions* self, uint32_t value);
/* ── PngWriter ─────────────────────────────────────────────── */

/* Encodes a Texture into PNG format. */
/*  */
/* In addition to single-image PNG, the writer can emit an animated PNG (APNG) from a sequence of frames via `writeAnimated()`. Each frame is written full-canvas with no inter-frame optimisation. */
whiteout_PngWriter* whiteout_textures_PngWriter_new(void);
void whiteout_textures_PngWriter_delete(whiteout_PngWriter* self);
/* Serialize the texture to a PNG byte buffer. */
whiteout_Bytes whiteout_textures_PngWriter_write(whiteout_PngWriter* self, struct whiteout_Texture* texture);
/* @return true if the last write produced any issues. */
int32_t whiteout_textures_PngWriter_hasIssues(const whiteout_PngWriter* self);
/* @return accumulated issues from the last write call. */
size_t whiteout_textures_PngWriter_getIssues_count(const whiteout_PngWriter* self);
whiteout_CString whiteout_textures_PngWriter_getIssues_at(const whiteout_PngWriter* self, size_t index);
/* ── JpegParser ─────────────────────────────────────────────── */

/* Reads a JPEG file or byte buffer and decodes it into a Texture. */
whiteout_JpegParser* whiteout_textures_JpegParser_new(void);
whiteout_JpegParser* whiteout_textures_JpegParser_new_pool(void* pool);
void whiteout_textures_JpegParser_delete(whiteout_JpegParser* self);
/* Parse a JPEG byte buffer. */
struct whiteout_Texture* whiteout_textures_JpegParser_parse(whiteout_JpegParser* self, const uint8_t* buffer, size_t buffer_size);
/* @return true if the last parse produced any issues. */
int32_t whiteout_textures_JpegParser_hasIssues(const whiteout_JpegParser* self);
/* @return accumulated issues from the last parse call. */
size_t whiteout_textures_JpegParser_getIssues_count(const whiteout_JpegParser* self);
whiteout_CString whiteout_textures_JpegParser_getIssues_at(const whiteout_JpegParser* self, size_t index);
/* ── JpegWriter ─────────────────────────────────────────────── */

/* Encodes a Texture into JPEG format. */
whiteout_JpegWriter* whiteout_textures_JpegWriter_new(void);
whiteout_JpegWriter* whiteout_textures_JpegWriter_new_quality_pool_progressive(int32_t quality, void* pool, int32_t progressive);
void whiteout_textures_JpegWriter_delete(whiteout_JpegWriter* self);
/* Serialize the texture to a JPEG byte buffer. */
whiteout_Bytes whiteout_textures_JpegWriter_write(whiteout_JpegWriter* self, struct whiteout_Texture* texture);
/* @return true if the last write produced any issues. */
int32_t whiteout_textures_JpegWriter_hasIssues(const whiteout_JpegWriter* self);
/* @return accumulated issues from the last write call. */
size_t whiteout_textures_JpegWriter_getIssues_count(const whiteout_JpegWriter* self);
whiteout_CString whiteout_textures_JpegWriter_getIssues_at(const whiteout_JpegWriter* self, size_t index);
/* ── DdsParser ─────────────────────────────────────────────── */

/* Reads a DDS file or byte buffer and decodes it into a Texture. */
whiteout_DdsParser* whiteout_textures_DdsParser_new(void);
void whiteout_textures_DdsParser_delete(whiteout_DdsParser* self);
/* Parse a DDS byte buffer. */
struct whiteout_Texture* whiteout_textures_DdsParser_parse(whiteout_DdsParser* self, const uint8_t* buffer, size_t buffer_size);
/* @return true if the last parse produced any issues. */
int32_t whiteout_textures_DdsParser_hasIssues(const whiteout_DdsParser* self);
/* @return accumulated issues from the last parse call. */
size_t whiteout_textures_DdsParser_getIssues_count(const whiteout_DdsParser* self);
whiteout_CString whiteout_textures_DdsParser_getIssues_at(const whiteout_DdsParser* self, size_t index);
/* ── DdsWriter ─────────────────────────────────────────────── */

/* Encodes a Texture into DDS format. */
whiteout_DdsWriter* whiteout_textures_DdsWriter_new(void);
void whiteout_textures_DdsWriter_delete(whiteout_DdsWriter* self);
/* Serialize the texture to a DDS byte buffer. */
whiteout_Bytes whiteout_textures_DdsWriter_write(whiteout_DdsWriter* self, struct whiteout_Texture* texture);
/* @return true if the last write produced any issues. */
int32_t whiteout_textures_DdsWriter_hasIssues(const whiteout_DdsWriter* self);
/* @return accumulated issues from the last write call. */
size_t whiteout_textures_DdsWriter_getIssues_count(const whiteout_DdsWriter* self);
whiteout_CString whiteout_textures_DdsWriter_getIssues_at(const whiteout_DdsWriter* self, size_t index);
/* ── TexParser ─────────────────────────────────────────────── */

/* Reads a TEX file or byte buffer and decodes it into a Texture. */
whiteout_TexParser* whiteout_textures_TexParser_new(void);
void whiteout_textures_TexParser_delete(whiteout_TexParser* self);
/* Parse a TEX file from disk. */
struct whiteout_Texture* whiteout_textures_TexParser_parse(whiteout_TexParser* self, const char* filePath);
/* Parse a TEX byte buffer. */
struct whiteout_Texture* whiteout_textures_TexParser_parse_buffer(whiteout_TexParser* self, const uint8_t* buffer, size_t buffer_size);
/* Parse a D4 TEX file from two file paths (metadata .tex + pixel payload). */
struct whiteout_Texture* whiteout_textures_TexParser_parse_texFilePath_payloadFilePath(whiteout_TexParser* self, const char* texFilePath, const char* payloadFilePath);
/* Parse a D4 TEX file from two byte buffers (metadata + pixel payload). */
struct whiteout_Texture* whiteout_textures_TexParser_parse_texData_payloadData(whiteout_TexParser* self, const uint8_t* texData, size_t texData_size, const uint8_t* payloadData, size_t payloadData_size);
/* Parse a D4 TEX with hi-res + low-res payloads from file paths. */
struct whiteout_Texture* whiteout_textures_TexParser_parse_texFilePath_hiResPayloadFilePath_lowResPayloadFilePath(whiteout_TexParser* self, const char* texFilePath, const char* hiResPayloadFilePath, const char* lowResPayloadFilePath);
/* @return true if the last parse produced any issues. */
int32_t whiteout_textures_TexParser_hasIssues(const whiteout_TexParser* self);
/* @return accumulated issues from the last parse call. */
size_t whiteout_textures_TexParser_getIssues_count(const whiteout_TexParser* self);
whiteout_CString whiteout_textures_TexParser_getIssues_at(const whiteout_TexParser* self, size_t index);
/* ── D2rTextureParser ─────────────────────────────────────────────── */

/* Reads a Diablo II: Resurrected `.texture` file and decodes it into a Texture. */
whiteout_D2rTextureParser* whiteout_textures_D2rTextureParser_new(void);
void whiteout_textures_D2rTextureParser_delete(whiteout_D2rTextureParser* self);
/* Parse a `.texture` byte buffer. */
struct whiteout_Texture* whiteout_textures_D2rTextureParser_parse(whiteout_D2rTextureParser* self, const uint8_t* buffer, size_t buffer_size);
/* @return true if @p buffer has a valid `.texture` header and known format. */
int32_t whiteout_textures_D2rTextureParser_detect(const whiteout_D2rTextureParser* self, const uint8_t* buffer, size_t buffer_size);
/* @return true if the last parse produced any issues. */
int32_t whiteout_textures_D2rTextureParser_hasIssues(const whiteout_D2rTextureParser* self);
/* @return accumulated issues from the last parse call. */
size_t whiteout_textures_D2rTextureParser_getIssues_count(const whiteout_D2rTextureParser* self);
whiteout_CString whiteout_textures_D2rTextureParser_getIssues_at(const whiteout_D2rTextureParser* self, size_t index);
/* ── D2rTextureWriter ─────────────────────────────────────────────── */

/* Encodes a Texture into the Diablo II: Resurrected `.texture` format. */
whiteout_D2rTextureWriter* whiteout_textures_D2rTextureWriter_new(void);
void whiteout_textures_D2rTextureWriter_delete(whiteout_D2rTextureWriter* self);
/* Serialize the texture to a byte buffer (default options). */
whiteout_Bytes whiteout_textures_D2rTextureWriter_write(whiteout_D2rTextureWriter* self, struct whiteout_Texture* texture);
/* @return true if the last write produced any issues. */
int32_t whiteout_textures_D2rTextureWriter_hasIssues(const whiteout_D2rTextureWriter* self);
/* @return accumulated issues from the last write call. */
size_t whiteout_textures_D2rTextureWriter_getIssues_count(const whiteout_D2rTextureWriter* self);
whiteout_CString whiteout_textures_D2rTextureWriter_getIssues_at(const whiteout_D2rTextureWriter* self, size_t index);
/* ── BmpParser ─────────────────────────────────────────────── */

/* Reads a BMP file or byte buffer and decodes it into a Texture. */
whiteout_BmpParser* whiteout_textures_BmpParser_new(void);
void whiteout_textures_BmpParser_delete(whiteout_BmpParser* self);
/* Parse a BMP byte buffer. */
struct whiteout_Texture* whiteout_textures_BmpParser_parse(whiteout_BmpParser* self, const uint8_t* buffer, size_t buffer_size);
/* @return true if the last parse produced any issues. */
int32_t whiteout_textures_BmpParser_hasIssues(const whiteout_BmpParser* self);