bindings/csharp/Whiteout/Textures/NativeMethods.Textures.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_PngParser_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_PngParser_parse(IntPtr self, ReadOnlySpan<byte> buffer, nuint buffer_size);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_PngParser_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_PngParser_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_PngParser_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_PngParser_isAnimated(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_PngParser_frameCount(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_PngParser_loopCount(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_PngParser_frame(IntPtr self, uint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_PngParser_frameDelayMs(IntPtr self, uint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_PngParser_frameInfo(IntPtr self, uint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_PngApngFrame_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_PngApngFrame_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_PngApngFrame_get_delayMs(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_PngApngFrame_set_delayMs(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_PngApngSaveOptions_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_PngApngSaveOptions_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_PngApngSaveOptions_get_loopCount(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_PngApngSaveOptions_set_loopCount(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_PngWriter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_PngWriter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_textures_PngWriter_write(IntPtr self, IntPtr texture);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_PngWriter_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_PngWriter_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_PngWriter_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_JpegParser_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_JpegParser_new_pool(IntPtr pool);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_JpegParser_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_JpegParser_parse(IntPtr self, ReadOnlySpan<byte> buffer, nuint buffer_size);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_JpegParser_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_JpegParser_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_JpegParser_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_JpegWriter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_JpegWriter_new_quality_pool_progressive(int quality, IntPtr pool, int progressive);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_JpegWriter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_textures_JpegWriter_write(IntPtr self, IntPtr texture);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_JpegWriter_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_JpegWriter_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_JpegWriter_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_DdsParser_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_DdsParser_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_DdsParser_parse(IntPtr self, ReadOnlySpan<byte> buffer, nuint buffer_size);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_DdsParser_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_DdsParser_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_DdsParser_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_DdsWriter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_DdsWriter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_textures_DdsWriter_write(IntPtr self, IntPtr texture);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_DdsWriter_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_DdsWriter_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_DdsWriter_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_TexParser_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_TexParser_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_TexParser_parse(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string filePath);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_TexParser_parse_buffer(IntPtr self, ReadOnlySpan<byte> buffer, nuint buffer_size);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_TexParser_parse_texFilePath_payloadFilePath(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string texFilePath, [MarshalAs(UnmanagedType.LPUTF8Str)] string payloadFilePath);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_TexParser_parse_texData_payloadData(IntPtr self, ReadOnlySpan<byte> texData, nuint texData_size, ReadOnlySpan<byte> payloadData, nuint payloadData_size);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_TexParser_parse_texFilePath_hiResPayloadFilePath_lowResPayloadFilePath(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string texFilePath, [MarshalAs(UnmanagedType.LPUTF8Str)] string hiResPayloadFilePath, [MarshalAs(UnmanagedType.LPUTF8Str)] string lowResPayloadFilePath);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_TexParser_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_TexParser_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_TexParser_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_D2rTextureParser_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_D2rTextureParser_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_D2rTextureParser_parse(IntPtr self, ReadOnlySpan<byte> buffer, nuint buffer_size);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_D2rTextureParser_detect(IntPtr self, ReadOnlySpan<byte> buffer, nuint buffer_size);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_D2rTextureParser_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_D2rTextureParser_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_D2rTextureParser_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_D2rTextureWriter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_D2rTextureWriter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_textures_D2rTextureWriter_write(IntPtr self, IntPtr texture);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_D2rTextureWriter_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_D2rTextureWriter_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_D2rTextureWriter_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_BmpParser_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_BmpParser_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_BmpParser_parse(IntPtr self, ReadOnlySpan<byte> buffer, nuint buffer_size);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_BmpParser_hasIssues(IntPtr self);

